<resources>
    <string name="app_name">Proyecto_Android</string>
    <string name="lbl_ususario">Ingresa tu usuario</string>
    <string name="lbl_contra">Ingresa tu contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_indentificador">Indentificador</string>
    <string name="lbl_nombre_compañia">Nombre de la compañia</string>
    <string name="lbl_nombre_contacto">Nombre de contacto</string>
    <string name="lbl_titulo_contacto">Titulo de contacto</string>
    <string name="lbl_direccion_">Dirrecion</string>
    <string name="lbl_ciudad">Ciudad</string>
    <string name="lbl_Region">Region</string>
    <string name="lbl_codigo_postal">Codigo postal</string>
    <string name="lbl_pais">Pais</string>
    <string name="lbl_telefono">Telefono</string>
    <string name="lbl_FAX">Fax</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_eliminar">Borrar</string>
    <string name="lbl_queNecesistas">¿Que accion necesitas hacer?</string>
    <string name="lbl_agregar_cliente">Agregar Cliente</string>
    <string name="btn_borrar">Borrar Cliente</string>
    <string name="btn_modificar_cliente">Modificar cliente</string>
    <string name="btn_consultar">Consultar algun cliente</string>
    <string name="lbl_consultas">Consultar clientes</string>
    <string name="lbl_buscar_por_consultas">Id del cliente</string>
</resources>