<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_indentificador" />

            <EditText
                android:id="@+id/caja_indentificador_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nombre_compañia" />

            <EditText
                android:id="@+id/caja_nombre_compañia_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nombre_contacto" />

            <EditText
                android:id="@+id/caja_nombre_contacto_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_titulo_contacto" />

            <EditText
                android:id="@+id/caja_titulo_contacto_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_direccion_" />

            <EditText
                android:id="@+id/caja_direccion_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ciudad" />

            <EditText
                android:id="@+id/caja_cuidad_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Region" />

            <EditText
                android:id="@+id/caja_region_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_codigo_postal" />

            <EditText
                android:id="@+id/caja_codigo_postal_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pais" />

            <EditText
                android:id="@+id/caja_pais_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_telefono" />

            <EditText
                android:id="@+id/caja_telefono_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_FAX" />

            <EditText
                android:id="@+id/caja_fax_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <Button
                android:id="@+id/btn_buscar_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buscar_cambio"
                android:text="@string/btn_buscar" />

            <Button
                android:id="@+id/btn_modificar_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cambios"
                android:text="@string/btn_modificar_cliente" />

            <Button
                android:id="@+id/btn_limpiar_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="limpiarCajas"
                android:text="@string/btn_limpiar" />

            <Button
                android:id="@+id/btn_salir_cambios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_salir" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>