<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_indentificador" />

            <EditText
                android:id="@+id/caja_indentificador_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="true"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nombre_compañia" />

            <EditText
                android:id="@+id/caja_nombre_compañia_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_titulo_contacto" />

            <EditText
                android:id="@+id/caja_titulo_contacto_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_direccion_" />

            <EditText
                android:id="@+id/caja_direccion_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ciudad" />

            <EditText
                android:id="@+id/caja_cuidad_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Region" />

            <EditText
                android:id="@+id/caja_region_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_codigo_postal" />

            <EditText
                android:id="@+id/caja_codigo_postal_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pais" />

            <EditText
                android:id="@+id/caja_pais_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_telefono" />

            <EditText
                android:id="@+id/caja_telefono_bajas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_FAX" />

            <EditText
                android:id="@+id/caja_fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone" />

            <Button
                android:id="@+id/btn_buscar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_buscar" />

            <Button
                android:id="@+id/btn_borrar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_eliminar" />

            <Button
                android:id="@+id/btn_limpiar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_limpiar" />

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_salir" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>